# recipe-graph-engine

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
config/: settings.py
deploy/: .env.example  deploy_vps.sh  docker-compose.vps.yml  load_data_vps.sh
scripts/: auto_classify_recipes.py  clean_ingredients_llm.py  collect_x_recipes.py  collect_x_recipes_grok.py  collect_x_recipes_wide.py  crawl_10000recipe.py  crawl_public_data.py  deduplicate_recipes.py  enrich_nutrition.py  extract_kaggle_korean.py  load_x_trends.py  neo4j_loader.py  normalize_recipe_names.py  normalize_recipe_steps.py  process_manual_files.py  recipe_loader.py  reload_vps_data.py  run_pipeline.py  structurizer.py
skills/recipe-graph-engine/: SKILL.md
skills/recipe-graph-engine/references/: data-pipeline.md  personas.md  queries.md  schema.md
skills/recipe-graph-engine/scripts/: neo4j_loader.py  query_engine.py  structurizer.py
src/api/: app.py  chat.py
src/engines/: __init__.py  persona_engine.py  query_engine.py
src/models/: __init__.py  schemas.py
src/utils/: __init__.py  llm_client.py  neo4j_client.py
tests/: test_persona_engine.py  test_query_engine.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
web/api/: categories.js  recommend-category.js  recommend.js
web/src/: App.jsx  index.css  main.jsx
web/src/services/: api.js
x_recipes/: x_recipes_grok.csv  x_recipes_grok.json  x_recipes_wide.csv  x_recipes_wide.json
(+7 files in other folders)
